--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI 초상화 벡터 변환기</title>
+    <title>AI 스타일러</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
         theme: {
           extend: {
             colors: {
-              'brand-blue': '#3b82f6',
-              'brand-purple': '#8b5cf6',
-              'dark-bg': '#111827',
-              'dark-card': '#1f2937',
-              'dark-border': '#374151',
-              'light-text': '#f3f4f6',
-              'medium-text': '#9ca3af',
+              'primary': '#4f46e5', // indigo-600
+              'primary-hover': '#4338ca', // indigo-700
+              'dark-bg': '#0f172a', // slate-900
+              'dark-card': '#1e293b', // slate-800
+              'dark-border': '#334155', // slate-700
+              'light-text': '#f1f5f9', // slate-100
+              'medium-text': '#94a3b8', // slate-400
             },
             keyframes: {
               'fade-in': {
@@ -27,6 +27,9 @@
             animation: {
               'fade-in': 'fade-in 0.5s ease-in-out',
             },
+            boxShadow: {
+              'md-glow': '0 4px 6px -1px rgba(0,0,0,0.1), 0 2px 4px -2px rgba(0,0,0,0.1), 0 0 15px -3px rgba(79, 70, 229, 0.3)',
+            }
           },
         },
       }
